--- a/public/angular/app/views/main.html
+++ b/public/angular/app/views/main.html
@@ -1,10 +1,13 @@
-<div class="hero-unit">
-  <h1>'Allo, 'Allo!</h1>
-  <p>You now have</p>
-  <ul>
-    <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-  </ul>
-  <p>Message from server: {{message}}</p>
-  <p>installed.</p>
-  <h3>Enjoy coding! - Yeoman</h3>
+<div class="row">
+  <div class="span12">
+    <h3>Message from server: {{message}}</h3>
+  </div>
+</div>
+<div class="row">
+  <div class="span12">
+    <h2>My Posts</h2>
+    <ul>
+      <li ng-repeat="post in posts">{{post.title}}</li>
+    </ul>
+  </div>
 </div>
