--- a/public/angular/app/views/main.html
+++ b/public/angular/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="span12">
+  <div class="span12 well">
     <h3>Message from server: {{message}}</h3>
   </div>
 </div>
