--- a/public/angular/app/views/main.html
+++ b/public/angular/app/views/main.html
@@ -1,4 +1,9 @@
 <div class="row">
+  <div class="row-fluid">
+    <div class="span12">
+      <div ng-include src="'views/partials/topbar.html'" ng-controller="NavigationCtrl"></div>
+    </div>
+  </div>
   <div class="span12 well">
     <h3>Message from server: {{message}}</h3>
   </div>
