Clear storage in case of 401

--- a/public/angular/app/views/partials/topbar.html
+++ b/public/angular/app/views/partials/topbar.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="#/home">Project name</a>
+      <a class="brand" href="#/home">Ebenezer</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li class="active"><a href="#/home">Home</a></li>
