--- a/public/angular/app/views/login.html
+++ b/public/angular/app/views/login.html
@@ -1,3 +1,8 @@
+<div class="row">
+  <div class="span12">
+    <div ng-include src="'views/partials/messages.html'" ng-controller="MessagesCtrl"></div>
+  </div>
+</div>
 <div class="row welcome">
   <div class="span12">
     <h1>Hello!</h1>
