--- a/public/angular_app/app/views/login.html
+++ b/public/angular_app/app/views/login.html
@@ -5,24 +5,11 @@
 </div>
 <div class="row welcome">
   <div class="col-md-12">
-    <h1>Hello!</h1>
+    <h1>Welcome</h1>
   </div>
 </div>
 <div class="row">
   <div class="col-md-6">
-    <div class="well">
-      <h2>Please Login</h2>
-      <form name="loginForm" class="form" data-ng-submit="login(user)">
-        <div class="form-group">
-          <input type="text" ng-model="user.email" placeholder="Email" required />
-        </div>
-        <div class="form-group">
-          <input type="password" ng-model="user.password" placeholder="Password" required />
-        </div>
-        <div class="form-group">
-          <input class="btn btn-success" type="submit" value="Login">
-        </div>
-      </form>
-    </div>
+    <div class="fx-fade-down fx-speed-1000" ng-include src="'views/partials/login_form.html'"></div>
   </div>
 </div>
