--- a/public/angular_app/app/views/partials/login_form.html
+++ b/public/angular_app/app/views/partials/login_form.html
@@ -8,7 +8,7 @@
       <input type="password" ng-model="user.password" placeholder="Password" required />
     </div>
     <div class="form-group">
-      <input class="btn btn-success" type="submit" value="Login">
+      <input class="button button-3d-action button-rounded" type="submit" value="Login">
     </div>
   </form>
 </div>
