more ui tinkering

--- a/public/angular_app/app/views/login.html
+++ b/public/angular_app/app/views/login.html
@@ -4,12 +4,12 @@
   </div>
 </div>
 <div class="row welcome">
-  <div class="col-md-12">
+  <div class="col-md-4 col-md-offset-4">
     <h1>Welcome</h1>
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6">
-    <div class="fx-fade-down fx-speed-1000" ng-include src="'views/partials/login_form.html'"></div>
+  <div class="col-md-4 col-md-offset-4">
+    <div class="fx-fade-up fx-speed-1000" ng-include src="'views/partials/login_form.html'"></div>
   </div>
 </div>
